--- a/language/english.json
+++ b/language/english.json
@@ -41,5 +41,47 @@
             "name": "<#b53f80>Eclipse (9)",
             "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Every Stage, <r>Activate a Random Artifact</c>\n( 7 )  Enemy Damage: <r>+30%</c>\n( 8 )  Allies receive <r>permanent damage</c>\n<#b53f80>( 9 )  Includes All SSR Typhoon Modifiers</c>"
         }
+    },
+    "artifact": {
+        "eclipse": {
+            "name": "Eclipse",
+            "description": "<#9ec3e9>\"Cast all hope aside. This planet rises against you.\"</c>\n\nStarts at baseline Monsoon difficulty"
+        },
+        "eclipse1": {
+            "name": "Eclipse (1)",
+            "description": "StageStart, Director Credits: <r>+500%</c>\n"
+        },
+        "eclipse2": {
+            "name": "Eclipse (2)",
+            "description": "Teleporter Gains <r>Radius</c>"
+        },
+        "eclipse3": {
+            "name": "Eclipse (3)",
+            "description": "Enemies Can Spawn <r>After TP Event</c>"
+        },
+        "eclipse4": {
+            "name": "Eclipse (4)",
+            "description": "Enemy Speed: <r>+25%</c>"
+        },
+        "eclipse5": {
+            "name": "Eclipse (5)",
+            "description": "Chest Prices: <r>+60%</c>"
+        },
+        "eclipse6": {
+            "name": "Eclipse (6)",
+            "description": "Every Stage, <r>Activate a Random Artifact</c>"
+        },
+        "eclipse7": {
+            "name": "Eclipse (7)",
+            "description": "Enemy Damage: <r>+30%</c>"
+        },
+        "eclipse8": {
+            "name": "Eclipse (8)",
+            "description": "Allies receive <r>permanent damage</c>"
+        },
+        "eclipse9": {
+            "name": "<#b53f80>Eclipse (9)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Every Stage, <r>Activate a Random Artifact</c>\n( 7 )  Enemy Damage: <r>+30%</c>\n( 8 )  Allies receive <r>permanent damage</c>\n<#b53f80>( 9 )  Includes All SSR Typhoon Modifiers</c>"
+        }
     }
 }
