--- a/language/english.json
+++ b/language/english.json
@@ -31,15 +31,51 @@
         },
         "eclipse7": {
             "name": "Eclipse (7)",
-            "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+20%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Ally Healing: <r>-50%</c>\n( 7 )  Enemy Damage: <r>+25%</c>"
+            "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+20%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Ally Healing: <r>-50%</c>\n( 7 )  Enemy credit scaling: <r>+25%</c>"
         },
         "eclipse8": {
             "name": "Eclipse (8)",
-            "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+20%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Ally Healing: <r>-50%</c>\n( 7 )  Enemy Damage: <r>+25%</c>\n( 8 )  Allies receive <r>permanent damage</c>"
+            "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+20%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Ally Healing: <r>-50%</c>\n( 7 )  Enemy credit scaling: <r>+25%</c>\n( 8 )  Allies receive <r>permanent damage</c>"
         },
         "eclipse9": {
             "name": "<#b53f80>Eclipse (9)",
-            "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+20%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Ally Healing: <r>-50%</c>\n( 7 )  Enemy Damage: <r>+25%</c>\n( 8 )  Allies receive <r>permanent damage</c>\n<#b53f80>( 9 )  Includes All SSR Typhoon Modifiers</c>"
+            "description": "( 1 )  StageStart, Director Credits: <r>+500%</c>\n( 2 )  Teleporter Gains <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+20%</c>\n( 5 )  Chest Prices: <r>+60%</c>\n( 6 )  Ally Healing: <r>-50%</c>\n( 7 )  Enemy credit scaling: <r>+25%</c>\n( 8 )  Allies receive <r>permanent damage</c>\n<#b53f80>( 9 )  Includes All SSR Typhoon Modifiers</c>"
+        },
+        "buffedeclipse1": {
+            "name": "Eclipse (1)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n"
+        },
+        "buffedeclipse2": {
+            "name": "Eclipse (2)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>"
+        },
+        "buffedeclipse3": {
+            "name": "Eclipse (3)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>"
+        },
+        "buffedeclipse4": {
+            "name": "Eclipse (4)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>"
+        },
+        "buffedeclipse5": {
+            "name": "Eclipse (5)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>\n( 5 )  Chest Prices: <r>+80%</c>"
+        },
+        "buffedeclipse6": {
+            "name": "Eclipse (6)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>\n( 5 )  Chest Prices: <r>+80%</c>\n( 6 )  Ally Healing: <r>-60%</c>"
+        },
+        "buffedeclipse7": {
+            "name": "Eclipse (7)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>\n( 5 )  Chest Prices: <r>+80%</c>\n( 6 )  Ally Healing: <r>-60%</c>\n( 7 )  Enemy Credit Scaling: <r>+30%</c>"
+        },
+        "buffedeclipse8": {
+            "name": "Eclipse (8)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>\n( 5 )  Chest Prices: <r>+80%</c>\n( 6 )  Ally Healing: <r>-60%</c>\n( 7 )  Enemy Credit Scaling: <r>+30%</c>\n( 8 )  Allies receive more <r>permanent damage</c>"
+        },
+        "buffedeclipse9": {
+            "name": "<#b53f80>Eclipse (9)",
+            "description": "( 1 )  StageStart, Director Credits: <r>+650%</c>\n( 2 )  Teleporter Gains Smaller <r>Radius</c>\n( 3 )  Enemies Can Spawn <r>After TP Event</c>\n( 4 )  Enemy Speed: <r>+25%</c>\n( 5 )  Chest Prices: <r>+80%</c>\n( 6 )  Ally Healing: <r>-60%</c>\n( 7 )  Enemy Credit Scaling: <r>+30%</c>\n( 8 )  Allies receive more <r>permanent damage</c>\n<#b53f80>( 9 )  Includes All SSR Typhoon Modifiers</c>"
         }
     },
     "artifact": {
@@ -79,13 +115,17 @@
             "name": "Eclipse (6)",
             "description": "Ally Healing: <r>-50%</c>"
         },
+        "alteclipse6": {
+            "name": "Eclipse (6) Alt",
+            "description": "Buffs All <r>Eclipse Modifiers</c>"
+        },
         "eclipse7": {
             "name": "Eclipse (7)",
-            "description": "Enemy Damage: <r>+25%</c>"
+            "description": "Enemy Credit Scaling: <r>+25%</c>"
         },
         "alteclipse7": {
             "name": "Eclipse (7) Alt",
-            "description": "Buffs All <r>Eclipse Modifiers</c>"
+            "description": "Enemy Damage: <r>+25%</c>"
         },
         "eclipse8": {
             "name": "Eclipse (8)",
